<resources>
    <string name="app_name">finalProjectPrep</string>

    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="startDate">Start Date (mm/dd/yy)</string>
    <string name="content">Event Description</string>
    <string name="removeNum">Remove Number</string>

    <string name="addEvent">Add Event</string>
    <string name="createEvent">Create Event</string>
    <string name="removeEvent">Remove</string>
    <string name="loopkUpDay">Look Up Day</string>


    <string name="back">Back</string>
        <string-array name="amPm">
            <item>am</item>
            <item>pm</item>
        </string-array>

</resources>