<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/addEvent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/startTime"
        android:ems="10"
        android:hint="@string/startTime"
        android:inputType="time"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEvent" />

    <EditText
        android:id="@+id/editTextTime2"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/endTime"
        android:ems="10"
        android:hint="@string/endTime"
        android:inputType="time"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/lookUpDay" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/startDate"
        android:ems="10"
        android:hint="@string/startDate"
        android:inputType="date"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints="Event Description"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/content"
        android:inputType="textMultiLine"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        tools:autofillHints="@string/content" />

    <Button
        android:id="@+id/backToNormalView"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/createEvent"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/editTextTextMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <Button
        android:id="@+id/lookUpDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/loopkUpDay"
        app:layout_constraintStart_toEndOf="@+id/addEvent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/back"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/editTextTextMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/backToNormalView" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:entries="@array/amPm"
        android:minWidth="50dp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/editTextTime"
        app:layout_constraintTop_toBottomOf="@+id/lookUpDay" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:entries="@array/amPm"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/editTextTime2"
        app:layout_constraintTop_toBottomOf="@+id/lookUpDay" />

    <EditText
        android:id="@+id/removeNumber"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/removeNum"
        android:ems="10"
        android:hint="@string/removeNum"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

    <Button
        android:id="@+id/remove"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:text="@string/removeEvent"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/removeNumber"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="340dp"
        android:layout_height="500dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ListView
            android:id="@+id/listView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>